--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "source",
+  "name": "blogs-backend",
   "version": "0.0.0",
   "main": "src",
   "private": true,
@@ -53,7 +53,6 @@
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
-    "mongodb": "^3.3.3",
     "mongoose": "^5.1.0",
     "mongoose-create-unique": "^0.4.4",
     "mongoose-keywords": "^0.4.0",
